# Neural-Detector

./: README.md  gradle_release_log.txt  gradle_release_log2.txt  pubspec.yaml
.github/workflows/: android-build.yml  build-apks-split.yml
android/app/: build.gradle.kts  proguard-rules.pro
backend/: CMakeLists.txt
backend/include/: text_analyzer.h
backend/src/: c_api.cpp  text_analyzer.cpp
lib/: main.dart
lib/config/: animation_config.dart
lib/data/: search_index.dart
lib/models/: chart_statistics.dart  scan_history.dart
lib/screens/: camera_scan_screen.dart  file_upload.dart  history_screen.dart  home_screen.dart  settings_screen.dart  splash_screen.dart  text_editor.dart
lib/theme/: app_theme.dart  theme_provider.dart
lib/utils/: analysis_cache.dart  app_localizations.dart  debug_logger.dart  exporter.dart  exporter_stub.dart  exporter_web.dart  file_info_stub.dart  file_picker_stub.dart  file_picker_web.dart  file_text_extractor.dart  history_manager.dart  live_analysis_bridge.dart  native_text_analyzer.dart  ocr.dart  ocr_mobile.dart  ocr_mobile_impl.dart  ocr_stub.dart  ocr_web.dart  ocr_web_impl.dart  optimized_native_analyzer.dart  robust_text_analyzer.dart  robust_worker.dart  search_bridge.dart  sensitivity.dart  settings_manager.dart  simple_text_analyzer.dart  text_analyzer.dart  text_analyzer_bridge.dart  text_analyzer_interface.dart  text_region_detector.dart  tflite_helper.dart  web_text_analyzer.dart  wordpiece_tokenizer.dart
test/: robust_worker_test.dart  widget_test.dart
tools/: generate_icon.ps1
web/: index.html  manifest.json
(+14 files in other folders)
